merges r25377 from trunk into ruby_1_9_1. -- * st.c (unpack_entries): save table->bins and never change the table   during unpacking. Because st_insert() may cause GC and refer the   table, i.e. st_foreach().  [Bug #2196]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/branches/ruby_1_9_1@26490 b2dd03c8-39d4-4d8f-98ff-823fe69b080e